--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -11,28 +11,23 @@
 </head>
 <body>
 <footer>
+    <!-- BEGIN 스크롤 버튼 영역 -->
+    <div class="scroll-button">
+        <button id="scroll-top">
+            <i class="fas fa-chevron-up label-title"></i>
+        </button>
+        <button id="scroll-bottom">
+            <i class="fas fa-chevron-down label-title"></i>
+        </button>
+    </div>
+    <!-- END 스크롤 버튼 영역 -->
     <!-- BEGIN 컨텐츠 영역 -->
     <div class="copyright">
         <span class="label-mini-title">&copy; 2023 PARK GI-PYO</span>
     </div>
     <!-- END 컨텐츠 -->
-    <!-- BEGIN 스크롤 버튼 영역 -->
-    <div class="scroll-button">
-        <button>
-            <a href="#">
-                <i class="fas fa-arrow-alt-circle-up"></i>
-                <span>TOP</span>
-            </a>
-        </button>
-        <button>
-            <a href=".copyright">
-                <span>DOWN</span>
-                <i class="fas fa-arrow-alt-circle-down"></i>
-            </a>
-        </button>
-    </div>
-    <!-- END 스크롤 버튼 영역 -->
 </footer>
 <script src="https://kit.fontawesome.com/9f7c487e95.js" crossorigin="anonymous"></script>
+<script type="text/javascript" src="/js/footer.js"></script>
 </body>
 </html>
