--- a/src/main/resources/static/css/lotto/drawResult.css
+++ b/src/main/resources/static/css/lotto/drawResult.css
@@ -1,26 +1,25 @@
-
-.move-button {
-    z-index: 1;
+.draw-no-container {
     display: flex;
-    width: 100%;
-    height: 40px;
-    justify-content: space-between;
-    position: fixed;
-    top: 50%;
-    left: 0;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
+    gap: 10px;
 }
 
-.move-button button {
+.move-button {
+    display: flex;
+    align-items: center;
+    padding: 5px 10px;
     border: none;
     border-radius: 5px;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
-    background: #f6e1e180;
-    font-size: 16px;
+    background: rgba(255, 255, 255, 0.3);
 }
 
 .search-group {
     width: 100%;
-    margin-bottom: 20px;
     display: flex;
     justify-content: flex-end;
 }
@@ -29,22 +28,6 @@
     display: flex;
     align-items: center;
 }
-
-.search-group select {
-    height: 30px;
-    padding: 0;
-    margin-left: 5px;
-    margin-right: 5px;
-    font-size: 16px;
-    text-align: center;
-}
-
-.search-group button {
-    width: 50px;
-    padding: 0;
-    font-size: 16px;
-}
-
 
 .win-result {
     width: 100%;
@@ -83,26 +66,6 @@
     text-align: center;
 }
 
-.ball.n0 {
-    background-color: #fbc400;
-}
-
-.ball.n1 {
-    background-color: #69c8f2;
-}
-
-.ball.n2 {
-    background-color: #ff7272;
-}
-
-.ball.n3 {
-    background-color: #aaaaaa;
-}
-
-.ball.n4 {
-    background-color: #b0d840;
-}
-
 .split-token {
     font-size: 32px;
     color: #ff7272;
@@ -118,7 +81,7 @@
 
 .prize-item {
     width: 100%;
-    background: white;
+    background: #f4f4f4;
     border: none;
     border-radius: 5px;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
@@ -137,30 +100,37 @@
 }
 
 .grid-win-1st {
-    background: rgba(255, 215, 0, 0.8);
+    background: rgba(253, 223, 174, 0.8);
 }
 
 .grid-win-2nd {
-    background: rgba(192, 192, 192, 0.8);
-}
-
-.grid-win-3rd {
-    background: rgba(248, 203, 188, 0.8);
+    background: rgba(196, 196, 196, 0.8);
 }
 
 .accordion {
     width: 100%;
 }
 
-/*#lotto-1st-win-shops-header .accordion-button {*/
-/*    background: rgba(255, 215, 0, 0.8);*/
-/*}*/
+.win-none {
+    display: none;
+    text-align: center;
+}
+
+.win-none-visible {
+    display: block;
+}
+
+.win-exists {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+}
 
 .card {
     width: 100%;
     border: none;
+    border-radius: 5px;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
-    margin-top: 5px;
     transition: all 0.1s ease-in-out;
 }
 
@@ -175,20 +145,54 @@
 }
 
 .card-header {
+    display: grid;
+    grid-template-columns: 1fr 75px;
     background: rgba(253, 223, 174, 0.8);
 }
 
 .card-header-silver {
-    background: rgba(161, 161, 161, 0.8);
+    background: rgba(196, 196, 196, 0.8);
 }
 
-.win-none {
-    display: none;
-    text-align: center;
+.shop-win-info {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    overflow: hidden;
 }
 
-.win-none-visible {
-    display: block;
+.shop-win-info-inner {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    align-items: center;
+}
+
+.shop-win-count {
+    margin-left: auto;
+}
+
+.shop-win-count-inner {
+    display: grid;
+    grid-template-columns: 30px 45px;
+    align-items: center;
+}
+
+.card-body {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    overflow: hidden;
+}
+
+#lotto-1st-win-shops .card-body {
+    background: rgba(255, 245, 238, 0.8);
+}
+
+#lotto-2nd-win-shops .card-body {
+    background: rgba(238, 238, 238, 0.8);
 }
 
 @media screen and (max-width: 1024px) {
@@ -201,19 +205,15 @@
     }
 }
 
+@media screen and (max-width: 991px) {
+    .win-exists {
+        grid-template-columns: 1fr;
+    }
+}
+
 @media screen and (max-width: 768px) {
-    .move-button button {
+    .move-button {
         font-size: 14px;
-    }
-
-    .search-group select {
-        height: 27px;
-        font-size: 15px;
-    }
-
-    .search-group button {
-        width: 45px;
-        font-size: 15px;
     }
 
     .draw-no {
@@ -245,7 +245,8 @@
 }
 
 @media screen and (max-width: 480px) {
-    .move-button button {
+    .move-button {
+        padding: 5px 8px;
         font-size: 12px;
     }
 
@@ -270,7 +271,7 @@
 }
 
 @media screen and (max-width: 380px) {
-    .move-button button {
+    .move-button {
         font-size: 11px;
     }
 
@@ -316,7 +317,7 @@
 }
 
 @media screen and (max-width: 320px) {
-    .move-button button {
+    .move-button {
         font-size: 10px;
     }
 
