--- a/src/main/resources/static/css/purchase/dhLogin.css
+++ b/src/main/resources/static/css/purchase/dhLogin.css
@@ -1,53 +1,6 @@
-body {
-    background: #434348;
-    position: relative;
-    min-height: 100vh;
-}
-
-.spinner-container {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 9999;
-    display: none;
-    justify-content: center;
-    align-items: center;
-}
-
-.alert-container {
-    position: fixed;
-    top: 5%;
-    left: 0;
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    z-index: 9999;
-}
-
-.alert {
-    display: none;
-    cursor: pointer;
-    max-width: 500px;
-}
-
-.content-group {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-    margin-top: 10px;
-}
-
 .dh-login-wrapper {
-    width: 100%;
-    max-width: 400px;
+    width: 400px;
+    max-width: 90%;
     border: none;
     border-radius: 5px;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
