--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -6,64 +6,106 @@
     <meta name="description" content="">
     <meta name="author" charset="PARK GI-PYO">
     <title>project-lottery</title>
-    <link href="/static/css/header.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/common.css" rel="stylesheet">
+    <link href="/css/header.css" rel="stylesheet">
 </head>
 <body>
 <header>
     <!-- BEGIN 데스크탑 메뉴 -->
     <nav class="desktop-menu">
-        <a href="/">
-            <img src="/img/ico-logo.png">
-        </a>
-        <ul>
-            <li><a href="/">홈</a></li>
-            <li><a href="/shop/list">복권판매점</a></li>
-            <li><a href="/shop/ranking">로또명당</a></li>
-            <li><a href="/L645">로또추첨결과</a></li>
-            <li><a href="/purchase/dh/login">로또구매</a></li>
-        </ul>
+        <div class="desktop-menu-inner">
+            <a href="/">
+                <img src="/img/ico-logo.png">
+            </a>
+            <div class="desktop-menu-link">
+                <a href="/">홈</a>
+                <a href="/shop/list">로또판매점</a>
+                <a href="/shop/ranking">로또명당</a>
+                <a href="/L645">로또추첨결과</a>
+                <a href="/purchase/dh/login">로또구매</a>
+                <a href="/L645/tool">로또도구</a>
+                <a href="/L645/analysis">로또통계</a>
+                <a class="btn btn-primary" href="/user/login">로그인</a>
+            </div>
+        </div>
         <hr>
     </nav>
     <!-- END 데스크탑 메뉴 -->
+    <!-- BEGIN 모바일 스크롤 메뉴 -->
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="menu-bar" aria-labelledby="menu-bar-label">
+        <div class="offcanvas-header">
+            <div class="mobile-menu-link-vertical" id="menu-bar-label">
+                <a class="label-title" href="/user/login">
+                    <i class="fas fa-power-off"></i>
+                    <span>로그인</span>
+                </a>
+            </div>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <hr>
+        <div class="offcanvas-body">
+            <div class="mobile-menu-link-vertical">
+                <a class="label-text" href="/">
+                    <i class="fas fa-house"></i>
+                    <span>홈</span>
+                </a>
+                <hr>
+                <a class="label-text" href="/shop/list">
+                    <i class="fas fa-map-location-dot"></i>
+                    <span>로또판매점</span>
+                </a>
+                <hr>
+                <a class="label-text" href="/shop/ranking">
+                    <i class="fas fa-trophy"></i>
+                    <span>로또명당</span>
+                </a>
+                <hr>
+                <a class="label-text" href="/L645">
+                    <i class="fas fa-medal"></i>
+                    <span>로또추첨결과</span>
+                </a>
+                <hr>
+                <a class="label-text" href="/purchase/dh/login">
+                    <i class="fas fa-wallet"></i>
+                    <span>로또구매</span>
+                </a>
+                <hr>
+                <a class="label-text" href="/L645/tool">
+                    <i class="fas fa-screwdriver-wrench"></i>
+                    <span>로또도구</span>
+                </a>
+                <hr>
+                <a class="label-text" href="/L645/analysis">
+                    <i class="fas fa-chart-simple"></i>
+                    <span>로또분석</span>
+                </a>
+            </div>
+        </div>
+    </div>
+    <!-- END 모바일 스크롤 메뉴 -->
     <!-- BEGIN 모바일 하단 메뉴 -->
     <nav class="mobile-menu">
-        <ul>
-            <li>
-                <a href="/">
-                    <div>
-                        <i class="fas fa-home"></i>
-                        <span>홈</span>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="/shop/list">
-                    <div>
-                        <i class="fas fa-store"></i>
-                        <span>복권판매점</span>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="/L645">
-                    <div>
-                        <i class="fas fa-clover"></i>
-                        <span>로또추첨결과</span>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="/shop/ranking">
-                    <div>
-                        <i class="fas fa-trophy"></i>
-                        <span>로또명당</span>
-                    </div>
-                </a>
-            </li>
-        </ul>
+        <div class="mobile-menu-link">
+            <a class="label-text" href="/">
+                <i class="fas fa-house"></i>
+                <span>홈</span>
+            </a>
+            <a class="label-bold-text" id="active-menu-info">
+                <i class="fas" id="active-menu-ico"></i>
+                <span id="active-menu"></span>
+            </a>
+            <a class="label-text" href="" data-bs-toggle="offcanvas" data-bs-target="#menu-bar" aria-controls="menu-bar">
+                <i class="fas fa-bars"></i>
+                <span>메뉴</span>
+            </a>
+        </div>
     </nav>
     <!-- END 모바일 하단 메뉴 -->
 </header>
 <script src="https://kit.fontawesome.com/9f7c487e95.js" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="/js/header.js"></script>
 </body>
 </html>
