--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" charset="PARK GI-PYO">
-    <title>intro</title>
+    <title>project-lottery</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/common.css" rel="stylesheet">
+    <link href="/css/header.css" rel="stylesheet">
     <link href="/css/footer.css" rel="stylesheet">
     <link href="/css/index.css" rel="stylesheet">
 </head>
 <body>
-<!-- BEGIN 상단 logo -->
-<div class="logo">
-    <img src="/img/logo.png">
-</div>
-<!-- END 상단 logo -->
+<header id="header">
+    header 삽입부
+    <hr>
+</header>
 <main class="container">
     <!-- BEGIN 로또 회차 타이머 -->
     <div class="lotto-timer">
@@ -34,51 +34,71 @@
         </div>
     </div>
     <!-- END 로또 회차 타이머 -->
-    <!-- BEGIN 메뉴 링크 -->
+    <!-- BEGIN 메뉴 타일 -->
     <div class="link-group">
         <div class="card" id="link-shop-list">
             <div class="card-body">
                 <span class="card-title label-title">
-                    <i class="fas fa-store">&nbsp;</i>복권판매점 조회
+                    <i class="fas fa-map-location-dot">&nbsp;</i>로또판매점
                 </span>
-                <p class="card-text label-text">주변 복권판매점이 궁금하신가요?</p>
-                <a href="/shop/list" class="btn btn-primary label-text">바로가기</a>
+                <p class="card-text label-text">내 주변 로또 판매점이 궁금하신가요?</p>
+                <a href="/shop/list" class="btn btn-primary label-text">Go</a>
             </div>
         </div>
         <div class="card" id="link-shop-ranking">
             <div class="card-body">
                 <span class="card-title label-title">
-                    <i class="fas fa-trophy">&nbsp;</i>로또명당 조회
+                    <i class="fas fa-trophy">&nbsp;</i>로또명당
                 </span>
-                <p class="card-text label-text">로또명당 순위가 궁금하신가요?</p>
-                <a href="/shop/ranking" class="btn btn-primary label-text">바로가기</a>
+                <p class="card-text label-text">전국 로또 명당이 궁금하신가요?</p>
+                <a href="/shop/ranking" class="btn btn-primary label-text">Go</a>
             </div>
         </div>
-        <div class="card" id="link-lotto">
+        <div class="card" id="link-draw-result">
             <div class="card-body">
                 <span class="card-title label-title">
-                    <i class="fas fa-clover">&nbsp;</i>로또추첨결과 조회
+                    <i class="fas fa-medal">&nbsp;</i>로또추첨결과
                 </span>
-                <p class="card-text label-text">회차별 로또추첨결과가 궁금하신가요?</p>
-                <a href="/L645" class="btn btn-primary label-text">바로가기</a>
+                <p class="card-text label-text">로또 추첨결과가 궁금하신가요?</p>
+                <a href="/L645" class="btn btn-primary label-text">Go</a>
             </div>
         </div>
         <div class="card" id="link-purchase-lotto">
             <div class="card-body">
                 <span class="card-title label-title">
-                    <i class="fas fa-cart-shopping">&nbsp;</i>로또 구매
+                    <i class="fas fa-wallet">&nbsp;</i>로또구매
                 </span>
-                <p class="card-text label-text">이번 주 로또 구매를 원하시나요?</p>
-                <a href="/purchase/dh/login" class="btn btn-primary label-text">바로가기</a>
+                <p class="card-text label-text">이번 주 로또 구매가 필요하신가요?</p>
+                <a href="/purchase/dh/login" class="btn btn-primary label-text">Go</a>
+            </div>
+        </div>
+        <div class="card" id="link-lotto-tool">
+            <div class="card-body">
+                <span class="card-title label-title">
+                    <i class="fas fa-screwdriver-wrench">&nbsp;</i>로또도구
+                </span>
+                <p class="card-text label-text">유용한 로또 도구가 필요하신가요?</p>
+                <a href="/L645/tool" class="btn btn-primary label-text">Go</a>
+            </div>
+        </div>
+        <div class="card" id="link-lotto-analysis">
+            <div class="card-body">
+                <span class="card-title label-title">
+                    <i class="fas fa-chart-simple">&nbsp;</i>로또분석
+                </span>
+                <p class="card-text label-text">다양한 로또 분석 결과가 궁금하신가요?</p>
+                <a href="/L645/analysis" class="btn btn-primary label-text">Go</a>
             </div>
         </div>
     </div>
-    <!-- END 메뉴 링크 -->
+    <!-- END 메뉴 타일 -->
 </main>
 <script src="https://kit.fontawesome.com/9f7c487e95.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript" src="/js/index.js"></script>
+<script type="text/javascript" src="/js/footer.js"></script>
+<script type="text/javascript" src="/js/header.js"></script>
 <footer id="footer">
     <hr>
     footer 삽입부
