--- a/src/main/resources/templates/lotto/drawResult.html
+++ b/src/main/resources/templates/lotto/drawResult.html
@@ -18,36 +18,35 @@
     <hr>
 </header>
 <main class="container">
-    <!-- BEGIN 회차 이동 버튼 -->
-    <div class="move-button">
-        <button class="prev-button">
-            <i class="fas fa-backward"></i>
-        </button>
-        <button class="next-button">
-            <i class="fas fa-forward"></i>
-        </button>
-    </div>
-    <!-- END 회차 이동 버튼 -->
-
     <div class="content-group">
-        <!-- BEGIN 회차 검색 영역 -->
+        <!-- BEGIN 회차 선택 selector -->
         <div class="search-group">
-            <form action="/L645" method="get">
-                <span class="label-mini-title">회차</span>
-                <select id="draw-no" name="drawNo" class="form-control">
+            <form method="get" action="/L645" id="draw-result-search-form">
+                <select class="form-select label-text" name="drawNo" id="draw-no">
                     <option>0회</option>
                 </select>
-                <button class="btn btn-primary" type="submit">
-                    <i class="fa fa-search"></i>
-                </button>
             </form>
         </div>
-        <!-- END 회차 검색 영역 -->
-
+        <!-- END 회차 선택 selector -->
+        <!-- BEGIN 추첨 결과 표시 영역 -->
         <div class="win-result">
-            <span class="draw-no">0회</span>
+            <!-- BEGIN 회차 표시 및 이동 영역 -->
+            <div class="draw-no-container">
+                <button class="move-button prev-button">
+                    <i class="fas fa-chevron-left label-title"></i>
+                </button>
+                <span class="draw-no">0회</span>
+                <button class="move-button next-button">
+                    <i class="fas fa-chevron-right label-title"></i>
+                </button>
+            </div>
+            <div>
+                <span class="label-mini-title">추첨일</span>&nbsp;
+                <span class="label-text draw-dt">1900-01-01</span>
+            </div>
+            <!-- END 회차 표시 및 이동 영역 -->
             <hr>
-            <!-- BEGIN 당첨 번호 -->
+            <!-- BEGIN 추첨 번호 -->
             <div class="draw-ball-list">
                 <span class="ball">1</span>
                 <span class="ball">2</span>
@@ -58,13 +57,8 @@
                 <span class="split-token">+</span>
                 <span class="ball">7</span>
             </div>
-            <!-- END 당첨 번호 -->
-            <div>
-                <span class="label-mini-title">추첨일</span>&nbsp;
-                <span class="label-text draw-dt">1900-01-01</span>
-            </div>
-
-
+            <!-- END 추첨 번호 -->
+            <hr>
             <!-- BEGIN 등위별 당첨 금액 -->
             <div class="prize-list">
                 <div class="prize-item">
@@ -81,10 +75,10 @@
                     <div></div>
                 </div>
             </div>
+            <!-- END 등위별 당첨 금액 -->
         </div>
-        <!-- END 당첨 번호 -->
-
-
+        <!-- END 추첨 결과 표시 영역 -->
+        <!-- BEGIN 1등 배출 판매점 표시 영역 -->
         <div class="accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="lotto-1st-win-shops-header">
@@ -95,28 +89,41 @@
                 </h2>
                 <div id="lotto-1st-win-shops-body" class="accordion-collapse collapse" aria-labelledby="lotto-1st-win-shops-header">
                     <div class="accordion-body">
-
                         <div class="win-none" id="win-1st-none">
                             <span class="label-sub-title">조회 결과가 없습니다.</span>
                         </div>
-                        <div class="card" id="lotto-1st-win-shops">
-                            <div class="card-header">
-                                <span class="label-text">자동</span> |
-                                <span class="label-bold-text">인터넷판매(동행복권)</span>
-                                <img src="/img/ico-1st-prize.png" class="ico"/><span class="label-text">51</span>
-                                <img src="/img/ico-2nd-prize.png" class="ico"/><span class="label-text">282</span>
-                            </div>
-                            <div class="card-body">
-                                <span class="label-text">동행복권(dhlottery.co.kr)</span>
-                                <img src="/img/ico-link.png" class="ico-small"/>
+                        <div class="win-exists">
+                            <div class="card" id="lotto-1st-win-shops">
+                                <div class="card-header">
+                                    <div class="shop-win-info">
+                                        <div class="shop-win-info-inner">
+                                            <span class="label-mini-title">[0]</span>
+                                            <span class="label-bold-ellipsis-text">인터넷판매(동행복권)</span>
+                                        </div>
+                                        <div>
+                                            <span class="label-text">자동</span>
+                                        </div>
+                                    </div>
+                                    <div class="shop-win-count">
+                                        <div class="shop-win-count-inner">
+                                            <img src="/img/ico-1st-prize.png" class="ico"/>
+                                            <span class="label-text">0</span>
+                                            <img src="/img/ico-2nd-prize.png" class="ico"/>
+                                            <span class="label-text">0</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <span class="label-ellipsis-text">동행복권(dhlottery.co.kr)</span>
+                                </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
         </div>
-
+        <!-- END 1등 배출 판매점 표시 영역 -->
+        <!-- BEGIN 2등 배출 판매점 표시 영역 -->
         <div class="accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="lotto-2nd-win-shops-header">
@@ -130,27 +137,45 @@
                         <div class="win-none" id="win-2nd-none">
                             <span class="label-sub-title">조회 결과가 없습니다.</span>
                         </div>
-                        <div class="card" id="lotto-2nd-win-shops">
-                            <div class="card-header card-header-silver">
-                                <span class="label-bold-text">인터넷판매(동행복권)</span>
-                                <img src="/img/ico-1st-prize.png" class="ico"/><span class="label-text">51</span>
-                                <img src="/img/ico-2nd-prize.png" class="ico"/><span class="label-text">282</span>
-                            </div>
-                            <div class="card-body">
-                                <span class="label-text">동행복권(dhlottery.co.kr)</span>
-                                <img src="/img/ico-link.png" class="ico-small"/>
+                        <div class="win-exists">
+                            <div class="card" id="lotto-2nd-win-shops">
+                                <div class="card-header card-header-silver">
+                                    <div class="shop-win-info">
+                                        <div class="shop-win-info-inner">
+                                            <span class="label-mini-title">[0]</span>
+                                            <span class="label-bold-ellipsis-text">인터넷판매(동행복권)</span>
+                                        </div>
+                                        <div>
+                                            <span class="label-text">-</span>
+                                        </div>
+                                    </div>
+                                    <div class="shop-win-count">
+                                        <div class="shop-win-count-inner">
+                                            <img src="/img/ico-1st-prize.png" class="ico"/>
+                                            <span class="label-text">0</span>
+                                            <img src="/img/ico-2nd-prize.png" class="ico"/>
+                                            <span class="label-text">0</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <span class="label-ellipsis-text">동행복권(dhlottery.co.kr)</span>
+                                </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
         </div>
+        <!-- END 2등 배출 판매점 표시 영역 -->
     </div>
 </main>
 <script src="https://kit.fontawesome.com/9f7c487e95.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="/js/lotto/drawResult.js"></script>
+<script type="text/javascript" src="/js/footer.js"></script>
+<script type="text/javascript" src="/js/header.js"></script>
 <footer id="footer">
     <hr>
     footer 삽입부
