--- a/src/main/resources/templates/purchase/dhLogin.html
+++ b/src/main/resources/templates/purchase/dhLogin.html
@@ -50,7 +50,7 @@
             </div>
         </div>
         <!-- END 로또 구매 타이머 -->
-
+        <!-- BEGIN 동행복권 로그인 -->
         <div class="dh-login-wrapper">
             <span class="label-title">동행복권 로그인</span>
             <hr>
@@ -72,6 +72,7 @@
                 <button class="btn btn-primary label-text" type="submit" id="login-btn">로그인</button>
             </form>
         </div>
+        <!-- END 동행복권 로그인 -->
     </div>
 </main>
 <script src="https://kit.fontawesome.com/9f7c487e95.js" crossorigin="anonymous"></script>
@@ -79,6 +80,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script type="text/javascript" src="/js/purchase/purchaseTimer.js"></script>
 <script type="text/javascript" src="/js/purchase/dhLogin.js"></script>
+<script type="text/javascript" src="/js/footer.js"></script>
+<script type="text/javascript" src="/js/header.js"></script>
 <footer id="footer">
     <hr>
     footer 삽입부
