--- a/src/main/resources/templates/shop/shopRanking.html
+++ b/src/main/resources/templates/shop/shopRanking.html
@@ -19,143 +19,173 @@
 </header>
 <main class="container">
     <div class="content-group">
-
-
-
+        <!-- BEGIN TOP 10 -->
         <div class="accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="ranking-1st-section-header">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#ranking-1st-section-body" aria-expanded="true" aria-controls="ranking-1st-section-body">
                         <img class="ico" src="/img/ico-1st-prize.png">
-                        <span class="label-title">TOP 1-3</span>
+                        <span class="label-title">TOP 10</span>
                     </button>
                 </h2>
                 <div id="ranking-1st-section-body" class="accordion-collapse collapse show" aria-labelledby="ranking-1st-section-header">
                     <div class="accordion-body">
-
                         <div class="card" id="lotto-shop-ranking1">
                             <div class="card-header">
-                                <span class="label-text">1위 |</span>
-                                <span class="label-bold-text">인터넷판매(동행복권)</span>
-                                <img src="/img/ico-1st-prize.png" class="ico"><span class="label-text">0</span>
-                                <img src="/img/ico-2nd-prize.png" class="ico"><span class="label-text">0</span>
+                                <div class="shop-info">
+                                    <div class="shop-info-inner">
+                                        <span class="label-mini-title">[0]</span>
+                                        <span class="label-bold-ellipsis-text">인터넷판매(동행복권)</span>
+                                    </div>
+                                    <div>
+                                        <span class="label-text">-</span>
+                                    </div>
+                                </div>
+                                <div class="shop-win-count">
+                                    <div class="shop-win-count-inner">
+                                        <img src="/img/ico-1st-prize.png" class="ico"/>
+                                        <span class="label-text">0</span>
+                                        <img src="/img/ico-2nd-prize.png" class="ico"/>
+                                        <span class="label-text">0</span>
+                                    </div>
+                                </div>
                             </div>
                             <div class="card-body">
-                                <span class="label-text">동행복권(dhlottery.co.kr)</span>
-                                <img src="/img/ico-link.png" class="ico-small">
+                                <span class="label-ellipsis-text">동행복권(dhlottery.co.kr)</span>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
         </div>
-
-
+        <!-- END TOP 10 -->
+        <!-- BEGIN TOP 30 -->
         <div class="accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="ranking-2nd-section-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#ranking-2nd-section-body" aria-expanded="false" aria-controls="ranking-2nd-section-body">
                         <img class="ico" src="/img/ico-2nd-prize.png">
-                        <span class="label-title">TOP 4-10</span>
+                        <span class="label-title">TOP 30</span>
                     </button>
                 </h2>
                 <div id="ranking-2nd-section-body" class="accordion-collapse collapse" aria-labelledby="ranking-2nd-section-header">
                     <div class="accordion-body">
-
-
                         <div class="card" id="lotto-shop-ranking2">
                             <div class="card-header">
-                                <span class="label-text">1위 |</span>
-                                <span class="label-bold-text">인터넷판매(동행복권)</span>
-                                <img src="/img/ico-1st-prize.png" class="ico"><span class="label-text">0</span>
-                                <img src="/img/ico-2nd-prize.png" class="ico"><span class="label-text">0</span>
+                                <div class="shop-info">
+                                    <div class="shop-info-inner">
+                                        <span class="label-mini-title">[0]</span>
+                                        <span class="label-bold-ellipsis-text">인터넷판매(동행복권)</span>
+                                    </div>
+                                    <div>
+                                        <span class="label-text">-</span>
+                                    </div>
+                                </div>
+                                <div class="shop-win-count">
+                                    <div class="shop-win-count-inner">
+                                        <img src="/img/ico-1st-prize.png" class="ico"/>
+                                        <span class="label-text">0</span>
+                                        <img src="/img/ico-2nd-prize.png" class="ico"/>
+                                        <span class="label-text">0</span>
+                                    </div>
+                                </div>
                             </div>
                             <div class="card-body">
-                                <span class="label-text">동행복권(dhlottery.co.kr)</span>
-                                <img src="/img/ico-link.png" class="ico-small">
+                                <span class="label-ellipsis-text">동행복권(dhlottery.co.kr)</span>
                             </div>
                         </div>
-
-
                     </div>
                 </div>
             </div>
         </div>
-
-
-
+        <!-- END TOP 30 -->
+        <!-- BEGIN TOP 50 -->
         <div class="accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="ranking-3rd-section-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#ranking-3rd-section-body" aria-expanded="false" aria-controls="ranking-3rd-section-body">
                         <img class="ico" src="/img/ico-3rd-prize.png">
-                        <span class="label-title">TOP 11-30</span>
+                        <span class="label-title">TOP 50</span>
                     </button>
                 </h2>
                 <div id="ranking-3rd-section-body" class="accordion-collapse collapse" aria-labelledby="ranking-3rd-section-header">
                     <div class="accordion-body">
-
-
                         <div class="card" id="lotto-shop-ranking3">
                             <div class="card-header">
-                                <span class="label-text">1위 |</span>
-                                <span class="label-bold-text">인터넷판매(동행복권)</span>
-                                <img src="/img/ico-1st-prize.png" class="ico"><span class="label-text">0</span>
-                                <img src="/img/ico-2nd-prize.png" class="ico"><span class="label-text">0</span>
+                                <div class="shop-info">
+                                    <div class="shop-info-inner">
+                                        <span class="label-mini-title">[0]</span>
+                                        <span class="label-bold-ellipsis-text">인터넷판매(동행복권)</span>
+                                    </div>
+                                    <div>
+                                        <span class="label-text">-</span>
+                                    </div>
+                                </div>
+                                <div class="shop-win-count">
+                                    <div class="shop-win-count-inner">
+                                        <img src="/img/ico-1st-prize.png" class="ico"/>
+                                        <span class="label-text">0</span>
+                                        <img src="/img/ico-2nd-prize.png" class="ico"/>
+                                        <span class="label-text">0</span>
+                                    </div>
+                                </div>
                             </div>
                             <div class="card-body">
-                                <span class="label-text">동행복권(dhlottery.co.kr)</span>
-                                <img src="/img/ico-link.png" class="ico-small">
+                                <span class="label-ellipsis-text">동행복권(dhlottery.co.kr)</span>
                             </div>
                         </div>
-
-
                     </div>
                 </div>
             </div>
         </div>
-
+        <!-- END TOP 50 -->
+        <!-- BEGIN TOP 100 -->
         <div class="accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="ranking-4th-section-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#ranking-4th-section-body" aria-expanded="false" aria-controls="ranking-4th-section-body">
                         <img class="ico" src="/img/ico-4th-prize.png">
-                        <span class="label-title">TOP 31-100</span>
+                        <span class="label-title">TOP 100</span>
                     </button>
                 </h2>
                 <div id="ranking-4th-section-body" class="accordion-collapse collapse" aria-labelledby="ranking-4th-section-header">
                     <div class="accordion-body">
-
-
                         <div class="card" id="lotto-shop-ranking4">
                             <div class="card-header">
-                                <span class="label-text">1위 |</span>
-                                <span class="label-bold-text">인터넷판매(동행복권)</span>
-                                <img src="/img/ico-1st-prize.png" class="ico"><span class="label-text">0</span>
-                                <img src="/img/ico-2nd-prize.png" class="ico"><span class="label-text">0</span>
+                                <div class="shop-info">
+                                    <div class="shop-info-inner">
+                                        <span class="label-mini-title">[0]</span>
+                                        <span class="label-bold-ellipsis-text">인터넷판매(동행복권)</span>
+                                    </div>
+                                    <div>
+                                        <span class="label-text">-</span>
+                                    </div>
+                                </div>
+                                <div class="shop-win-count">
+                                    <div class="shop-win-count-inner">
+                                        <img src="/img/ico-1st-prize.png" class="ico"/>
+                                        <span class="label-text">0</span>
+                                        <img src="/img/ico-2nd-prize.png" class="ico"/>
+                                        <span class="label-text">0</span>
+                                    </div>
+                                </div>
                             </div>
                             <div class="card-body">
-                                <span class="label-text">동행복권(dhlottery.co.kr)</span>
-                                <img src="/img/ico-link.png" class="ico-small">
+                                <span class="label-ellipsis-text">동행복권(dhlottery.co.kr)</span>
                             </div>
                         </div>
-
-
                     </div>
                 </div>
             </div>
         </div>
-        
-        
-        
-        
-        
+        <!-- END TOP 100 -->
     </div>
 </main>
 <script src="https://kit.fontawesome.com/9f7c487e95.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="/js/footer.js"></script>
+<script type="text/javascript" src="/js/header.js"></script>
 <footer id="footer">
     <hr>
     footer 삽입부
