--- a/src/main/resources/templates/user/userJoin.html
+++ b/src/main/resources/templates/user/userJoin.html
@@ -5,28 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" charset="PARK GI-PYO">
-    <title>purchase history</title>
+    <title>project-lottery</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/common.css" rel="stylesheet">
     <link href="/css/header.css" rel="stylesheet">
     <link href="/css/footer.css" rel="stylesheet">
-    <link href="/css/purchase/dhLogin.css" rel="stylesheet">
+    <link href="/css/user/userJoin.css" rel="stylesheet">
 </head>
 <body>
 <header id="header">
     header 삽입부
     <hr>
 </header>
-<div class="alert-container">
-    <div class="alert alert-danger">
-        <span></span>
-    </div>
-</div>
 <main class="container">
-    coming soon.
+    <div class="content-group">
+    </div>
 </main>
 <script src="https://kit.fontawesome.com/9f7c487e95.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="/js/user/userJoin.js"></script>
+<script type="text/javascript" src="/js/footer.js"></script>
+<script type="text/javascript" src="/js/header.js"></script>
 <footer id="footer">
     <hr>
     footer 삽입부
